--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,7 @@
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         android:textColorLink="@android:color/white"
+        android:textCursorDrawable="@null"
         tools:targetApi="lollipop" />
 
     <EditText
@@ -41,6 +42,7 @@
         android:inputType="textPassword"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
+        android:textCursorDrawable="@null"
         tools:targetApi="lollipop" />
 
     <Button
