--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#A207FA"/>
+            <solid android:color="#665EFF"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
