--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
         android:text="@string/Signin"
         android:textColor="@color/colorPrimary" />
 
+
     <TextView
         android:id="@+id/forgotPass"
         android:layout_width="wrap_content"
@@ -62,6 +63,15 @@
         android:layout_below="@+id/loginButton"
         android:text="@string/forgotpass"
         android:textColor="@android:color/white" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Invalid username or password"
+        android:layout_below="@id/forgotPass"
+        android:layout_centerHorizontal="true"
+        android:textSize="17dp"
+        android:textColor="@android:color/holo_red_dark"/>
 
     <TextView
         android:id="@+id/register"
