--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -33,7 +33,7 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <EditText
+            <TextView
                 android:id="@+id/startTime1"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
@@ -54,7 +54,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="22sp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/endTime1"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
@@ -77,7 +77,7 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <EditText
+            <TextView
                 android:id="@+id/startTime2"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
@@ -98,7 +98,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="22sp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/endTime2"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
@@ -121,7 +121,7 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <EditText
+            <TextView
                 android:id="@+id/startTime3"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
@@ -142,7 +142,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="22sp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/endTime3"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
