--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_border"
         android:text="@string/Signin"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="#5574F7" />
 
 
     <TextView
