--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,18 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
             android:background="#A6665EFF"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/signin"
+                android:layout_gravity="end"
+                android:text="@string/Signin"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -87,8 +96,6 @@
                 android:textSize="20sp"
                 android:text="Electrition is very nice"/>
         </LinearLayout>
-
-
 
         <RelativeLayout
             android:layout_below="@+id/textCarousal"
